[package]
name = "bap"
version = "0.1.0"
edition = "2021"
authors = ["Ben McNicholl <hello@benmcnicholl.com>"]
description = "A CLI tool to manage local Buildkite versions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
flate2 = "1.0.33"
tar = "0.4.41"
indicatif = "0.17.8"
futures-util = "0.3.30"
